--- a/index.html
+++ b/index.html
@@ -12,6 +12,114 @@
 
 <body>
 
+<header>
+  <div class="container pt-3">
+    <div class="row">
+      <div class="col-lg-12">
+        <nav class="navbar">
+          <div class="container">
+            <h3>Logo</h3>
+          </div>
+        </nav>
+      </div>
+    </div>
+  </div>
+</header>
+
+<section class="main-content p-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8">
+        <h1 class="text-main">Chega de esperar o fim do mês!</h1>
+      </div>
+      <div class="col-lg-4">
+        <h1>teste</h1>
+      </div>
+    </div>
+    <div class="row pt-5">
+      <div class="col-lg-6">
+        <p class="align-content-center">
+          A Empresa proporciona para seus clientes 
+          uma solução inovadora que transforma
+           radicalmente o dia a dia do RH.
+        </h1>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="second-content p-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <h1 class="text-second-content">De básico a folha Empresa não tem nada!</h1>
+      </div>
+    </div>
+    <div class="row pt-5">
+      <div class="col-lg-6">
+        <p class="align-content-center">
+          Nosso padrão de folha é o mais completo
+          do mercado!
+          <br>
+          Diferente dos outros fornecedores, nossos
+          KPI's, Workflow, Gestão de benefícios e
+          eSocial fazem parte do sistema Folha de
+          Pagamentos Empresa sem custos adicionais!   
+        </h1>
+      </div>
+      <div class="col-lg-6">teste</div>
+    </div>
+  </div>
+</section>
+
+<section style="display: flex">
+  <div class="left-content">
+    <div class="row d-flex justify-content-center align-content-center">
+      <div class="col-lg-6">
+        <p class="pt-5 text-center">
+          Quer levar a Empresa
+          para o seu dia a dia?
+        </p>  
+        <img src="" alt="img">
+      </div>
+    </div>
+  </div>
+  <div class="right-content">
+    <div class="row d-flex justify-content-center align-content-center">
+      <div class="col-lg-6">
+        <p class="pt-5 text-center">
+          Deixa aqui seus dados que 
+          entraremos em contato!
+        </p>
+        <form class="pt-5">
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Nome Completo</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">E-mail</label>
+            <input type="email" class="form-control" id="exampleInputPassword1">
+          </div>
+          <label for="exampleInputEmail1" class="form-label">Nome Completo</label>
+          <div class="mb-3 form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Google</label>
+          </div>
+          <div class="mb-3 form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Google</label>
+          </div>
+          <div class="mb-3 form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Google</label>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 
 
