--- a/index.html
+++ b/index.html
@@ -13,40 +13,39 @@
 <body>
 
 <header>
-  <div class="container pt-3">
+  <div>
     <div class="row">
       <div class="col-lg-12">
         <nav class="navbar">
           <div class="container">
-            <h3>Logo</h3>
+            <h1>Logo</h3>
           </div>
         </nav>
       </div>
     </div>
   </div>
+  <section class="main-content p-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8">
+          <h1 class="text-main">Chega de esperar o fim do mês!</h1>
+        </div>
+      </div>
+      <div class="row pt-5">
+        <div class="col-lg-6">
+          <p class="align-content-center">
+            A Empresa proporciona para seus clientes 
+            uma solução inovadora que transforma
+            radicalmente o dia a dia do RH.
+          </h1>
+        </div>
+        <div class="col-lg-4">
+          <h1>teste</h1>
+        </div>
+      </div>
+    </div>
+  </section>
 </header>
-
-<section class="main-content p-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8">
-        <h1 class="text-main">Chega de esperar o fim do mês!</h1>
-      </div>
-      <div class="col-lg-4">
-        <h1>teste</h1>
-      </div>
-    </div>
-    <div class="row pt-5">
-      <div class="col-lg-6">
-        <p class="align-content-center">
-          A Empresa proporciona para seus clientes 
-          uma solução inovadora que transforma
-           radicalmente o dia a dia do RH.
-        </h1>
-      </div>
-    </div>
-  </div>
-</section>
 
 <section class="second-content p-5">
   <div class="container">
@@ -72,10 +71,10 @@
   </div>
 </section>
 
-<section style="display: flex">
+<section class="last-container">
   <div class="left-content">
     <div class="row d-flex justify-content-center align-content-center">
-      <div class="col-lg-6">
+      <div class="col-lg-5">
         <p class="pt-5 text-center">
           Quer levar a Empresa
           para o seu dia a dia?
@@ -86,34 +85,40 @@
   </div>
   <div class="right-content">
     <div class="row d-flex justify-content-center align-content-center">
-      <div class="col-lg-6">
+      <div class="col-lg-6 d-flex flex-column align-items-center">
         <p class="pt-5 text-center">
           Deixa aqui seus dados que 
           entraremos em contato!
         </p>
-        <form class="pt-5">
+        <form class="pt-5 pb-5 d-flex flex-column">
           <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Nome Completo</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            <label for="fullName" class="form-label">Nome Completo</label>
+            <input type="text" class="form-control" id="fullName">
           </div>
           <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">E-mail</label>
-            <input type="email" class="form-control" id="exampleInputPassword1">
+            <label for="email" class="form-label">E-mail</label>
+            <input type="email" class="form-control" id="email">
           </div>
-          <label for="exampleInputEmail1" class="form-label">Nome Completo</label>
+          <label for="" class="form-label pb-2">Onde nos conheceu?</label>
           <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Google</label>
-          </div>
-          <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Google</label>
+            <input type="checkbox" class="form-check-input" id="checkGoogle">
+            <label class="form-check-label" for="checkGoogle">Google</label>
           </div>
           <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Google</label>
+            <input type="checkbox" class="form-check-input" id="checkSocial">
+            <label class="form-check-label" for="checkSocial">Redes Socias</label>
           </div>
+          <div class="mb-3 form-check">
+            <input type="checkbox" class="form-check-input" id="checkRecommendation">
+            <label class="form-check-label" for="checkRecommendation">Indicações</label>
+          </div>
+          <label for="" class="form-label pt-2 pb-2">Quantos funcionários</label>
+          <div class="pb-4">
+            <button class="decrement">-</button>
+            <input class="qntEmployee" type="text">
+            <button class="increment">+</button>
+          </div>
+          <button class="sendForm" disabled>Enviar</button>
         </form>
       </div>
     </div>
