--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 </head>
 
 <body>
-
 <header>
   <div>
     <div class="row">
       <div class="col-lg-12">
         <nav class="navbar">
-          <div class="container">
-            <h1>Logo</h3>
+          <div class="container pt-3">
+            <img class="imgLogo" src="/assets/imgs/Logo.png" alt="">
           </div>
         </nav>
       </div>
@@ -39,8 +38,8 @@
             radicalmente o dia a dia do RH.
           </h1>
         </div>
-        <div class="col-lg-4">
-          <h1>teste</h1>
+        <div class="col-lg-4 divImgOne">
+          <img class="imgOne" src="/assets/imgs/imagem-01.png" alt="">
         </div>
       </div>
     </div>
@@ -50,7 +49,7 @@
 <section class="second-content p-5">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12">
+      <div class="col-lg-11">
         <h1 class="text-second-content">De básico a folha Empresa não tem nada!</h1>
       </div>
     </div>
@@ -66,7 +65,9 @@
           Pagamentos Empresa sem custos adicionais!   
         </h1>
       </div>
-      <div class="col-lg-6">teste</div>
+      <div class="col-lg-6 divImgTwo">
+        <img class="imgTwo" src="/assets/imgs/imagem-02.png" alt="">
+      </div>
     </div>
   </div>
 </section>
@@ -74,12 +75,12 @@
 <section class="last-container">
   <div class="left-content">
     <div class="row d-flex justify-content-center align-content-center">
-      <div class="col-lg-5">
-        <p class="pt-5 text-center">
+      <div class="col-lg-5 d-flex flex-column align-items-center">
+        <p class="pt-5 text-center imgTwo">
           Quer levar a Empresa
           para o seu dia a dia?
         </p>  
-        <img src="" alt="img">
+        <img class="pt-5 pb-5 imgThree" src="/assets/imgs/imagem-04.png" alt="img">
       </div>
     </div>
   </div>
@@ -90,14 +91,16 @@
           Deixa aqui seus dados que 
           entraremos em contato!
         </p>
-        <form class="pt-5 pb-5 d-flex flex-column">
+        <form class="pt-5 pb-5 d-flex flex-column" id="teste">
           <div class="mb-3">
             <label for="fullName" class="form-label">Nome Completo</label>
             <input type="text" class="form-control" id="fullName">
+            <label class="form-label pt-2 error-message d-none" id="errorName">Por favor, informe seu nome completo.</label>
           </div>
           <div class="mb-3">
             <label for="email" class="form-label">E-mail</label>
             <input type="email" class="form-control" id="email">
+            <label class="form-label pt-2 error-message d-none" id="errorEmail">Por favor, informe seu melhor e-mail.</label>
           </div>
           <label for="" class="form-label pb-2">Onde nos conheceu?</label>
           <div class="mb-3 form-check">
@@ -113,12 +116,15 @@
             <label class="form-check-label" for="checkRecommendation">Indicações</label>
           </div>
           <label for="" class="form-label pt-2 pb-2">Quantos funcionários</label>
-          <div class="pb-4">
-            <button class="decrement">-</button>
-            <input class="qntEmployee" type="text">
-            <button class="increment">+</button>
+          <div class="pb-4 d-flex">
+            <button type="button" class="decrement" onclick="decrement()">-</button>
+            <div class="qntEmployee d-flex align-items-center justify-content-center" id="qtdEmployee">0</div>
+            <button type="button" class="increment" onclick="increment()">+</button>
           </div>
-          <button class="sendForm" disabled>Enviar</button>
+          <div class="d-none msgSuccess p-2 d-flex align-items-center justify-content-center" id="success">
+            <label for="">Sua mensagem foi enviada com sucesso!</label>
+          </div>
+          <button type="button" class="sendForm mt-3" id="sendForms" onclick="sendForm()">Enviar</button>
         </form>
       </div>
     </div>
@@ -127,7 +133,7 @@
 
 
 
-
+<script src="/assets/js/script.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="crossorigin="anonymous"></script>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
