--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 <header>
-  <div>
+  <div class="px-5">
     <div class="row">
       <div class="col-lg-12">
         <nav class="navbar">
